fixed body overflow hidden

--- a/marty-blocks-lib/replacements/scratch-gui/src/components/gui/gui.css
+++ b/marty-blocks-lib/replacements/scratch-gui/src/components/gui/gui.css
@@ -2,6 +2,11 @@
 @import "../../css/colors.css";
 @import "../../css/z-index.css";
 
+
+body {
+    overflow: hidden !important;
+}
+
 .page-wrapper {
     height: 100%;
 }
